INBOX-278 Force font-size to 16px in inbox module, to prevent zoom on iOS devices.

--- a/modules/linagora.esn.unifiedinbox/frontend/css/styles.less
+++ b/modules/linagora.esn.unifiedinbox/frontend/css/styles.less
@@ -124,3 +124,10 @@
   }
 
 }
+
+// iOS workaround to disable auto-zoom on input fields
+.inbox-root {
+  input:not([type="button"]):not([type="submit"]):not([type="file"]), select, textarea, tags-input .tags .input {
+    font-size: 16px;
+  }
+}
